k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony-php
spec:
  selector:
    app: symfony-php
  ports:
  - port: 9000
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: symfony-nginx
spec:
  selector:
    app: symfony-nginx
  ports:
  - port: 80
    targetPort: 80
